Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14938

Permanent "[SYSREG] timeout", after "Access on reserved section?", during Stage 2, on Test VBox, since 0.4.10-dev-540-g50b00f0

    XMLWordPrintable

Details

    Description

      Last success:
      Aug 17 19:54 f8f08f3e9b13... success #8526

      ...
      (dll/win32/syssetup/security.c:149) SYSSETUP: SetPrimaryDomain()
      fixme:(dll/win32/lsasrv/notify.c:118) LsapNotifyPolicyChange(4)
      err:(dll/opengl/opengl32/wgl.c:740) Error: hdc is not a DC handle!
      (win32ss/user/winsrv/usersrv/shutdown.c:630) SrvExitWindowsEx(ClientId: 16c.170, Flags: 0x2)
      (win32ss/user/ntuser/shutdown.c:165) err: NotifyLogon(0x103, 0x0)
      ...

      –

      Aug 18 16:31 cf56e1cb5825... failure #8543
      Not this issue yet.

      Aug 18 17:04 b2d2e3433b74... failure #8544
      ONLINE-758. But unrelated commit.

      Aug 18 17:14 50b00f0fcca6... failure #8545
      Regressed: [FASTFAT] Implement delayed close.
      Cc Heis Spiter.

      –

      Current regression:
      Aug 20 00:06 934104d73fdd... failure #8610

      ...
      (dll/win32/syssetup/security.c:149) SYSSETUP: SetPrimaryDomain()
      fixme:(dll/win32/lsasrv/notify.c:118) LsapNotifyPolicyChange(4)
      (ntoskrnl/mm/ARM3/pagfault.c:1127) Access on reserved section?
      (win32ss/user/ntuser/desktop.c:1300) err: ptiLastInput is CLEARED!!
      [SYSREG] timeout
      libvirt: VirtualBox Driver error : internal error: could not delete the domain, rc=80bb0007
      [SYSREG] Stage took: 233.499489 seconds

      Attachments

        Issue Links

          Activity

            People

              Heis Spiter Pierre Schweitzer
              Serge Gautherie Serge Gautherie
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: