[FASTFAT] Disable delayed close

It brings too many regressions for too little gain.

CORE-14938
CORE-14917
CORE-14826